--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
   },
   "dependencies": {
     "boardgame.io": "^0.24.0",
+    "forever": "^0.15.3",
+    "lodash.uniqueid": "^4.0.1",
+    "prettier": "^1.13.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "wgo": "^3.0.0-alpha.1"
   },
   "scripts": {
     "start": "react-scripts start",
