--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     },
     {
       "name": "sndsgn",
-      "email": "bestnotwriteme@checkyoselfbeforeyouriggidywreckyoself.xyz"
+      "email": "directtospam@mail.xyz"
     }
   ],
   "license": "MIT",
@@ -27,10 +27,21 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
+    "@material-ui/core": "^1.4.1",
+    "@material-ui/icons": "^2.0.0",
     "boardgame.io": "^0.24.0",
+    "dotenv": "^6.0.0",
+    "material-design-icons": "^3.0.1",
+    "notosans-fontface": "^1.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "react-social-login": "^3.4.2",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
